# bet-search

./: .gitignore  Cargo.toml  README.md  clear.sh  gleam.toml  run.sh  shell.nix
downloads/: efortuna.html  sts.html  superbet.html
src/: bookmaker.rs  download.rs  efortuna.rs  event.gleam  lib.rs  main.rs  sts.rs  superbet.rs  team.rs
src/adapter/: browser.rs  mod.rs  scrape.rs
src/bmbets/: football.rs  menu.rs  mod.rs  search.rs
src/download_and_save/: download.rs  mod.rs  save.rs
src/fortuna/: event.rs  live.rs  mod.rs  safe.rs  team.rs
src/fortuna/event/: football.rs  football.rs1UOlyt.bck  football2.rs
src/fortuna/live/: mod.rs  sport_bets.rs  subpages.rs  tenis.rs
src/fortuna/prematch/: mod.rs
src/fortuna/prematch/football/: mod.rs  subpage.rs
src/shared/: book.rs  db.rs  download_and_save.rs  event.rs  mod.rs  page.rs  sport_bets.rs
src/shared/event/: football.rs
src/shared/team/: es.rs  it.rs
src/sts/: live.rs  mod.rs
src/sts/live/: mod.rs  tennis.rs
src/superbet/: live.rs  mod.rs
src/surebet/: value.rs
src/team/: en.rs  pl.rs
src/utils/: browser.rs  browser_pool.rs  date.rs  download.rs  mod.rs  page.rs  probability.rs  read.rs  save.rs  scrape.rs  sport_bets.rs
