[package]
name = "odds"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fantoccini = "0.19.3"
futures = "0.3.31"
scraper = "0.19.0"
serde_json = "1.0.137"
thiserror = "2.0.11"
tokio = { version = "1.37.0", features = ["full"] }
eat = { git = "https://github.com/or-n/rust-minimalist-utils.git" }
