[package]
name = "odds"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fantoccini = "0.22.0"
futures = "0.3.31"
scraper = "0.23.1"
serde_json = "1.0.142"
thiserror = "2.0.12"
tokio = { version = "1.47.1", features = ["full"] }
eat = { git = "https://github.com/or-n/util-rust.git" }
chrono = "0.4.41"
tokio-tungstenite = "0.27.0"
surrealdb = "2.3.7"
dotenv = "0.15.0"
serde = { version = "1.0.219", features = ["derive"] }

[[bin]]
name = "fortuna"
path = "src/bin/fortuna.rs"

[[bin]]
name = "fortuna_matches"
path = "src/bin/fortuna_matches.rs"

[[bin]]
name = "fortuna_zk"
path = "src/bin/fortuna_zk.rs"

[[bin]]
name = "fortuna_single"
path = "src/bin/fortuna_single.rs"

[[bin]]
name = "sts"
path = "src/bin/sts.rs"

[[bin]]
name = "bmbets_matches"
path = "src/bin/bmbets_matches.rs"

[[bin]]
name = "bmbets"
path = "src/bin/bmbets.rs"

[[bin]]
name = "surebet"
path = "src/bin/surebet.rs"

[[bin]]
name = "serve"
path = "src/bin/serve.rs"
